# Programming

./: .gitmodules  README.md  my_screenshot.md  sort.c
RGR_interpreter/: .gitignore  CMakeLists.txt  README.md  func.h  function_bf.c  main.c  test_bf.c
lab10/: Makefile  README.md  conus  conus.h  def.c  main.c  task.c
lab11/: .gitignore  README.md  a.out  gdb_ex1  gdb_ex1.c  gdb_ex2  gdb_ex2.c  gdb_ex3  gdb_ex3.c  gdb_ex4  gdb_ex4.c
lab11/otladchik/: first.c  task5  task5.c
lab12/: README.md  dynamic_exe  lab12  lab12.c  main.c  smarthome.c  smarthome.h
lab13/: CMakeLists.txt  Makefile  README.md  sorted
lab13/src/: main.c  smarthome.c
lab14/: README.md  lab14  main  main.c  test  test.c
lab15/: README.md  database.rle  main.c  out.text  staff.csv  text
lab16/: matrix  pthread.c  tablic.py  thread  threads.md
lab17/: README.md  test_game.c
lab18/: README.md
lab18/src/: main.cpp  paint_core.cpp
lab6/: README.md  lab6.c
lab7/: README.md  lab7.c
lab8/: README.md  lab8.c
lab9/: README.md  mergesort.py  my_screenshot.md
otladchik/: a.out  first
